Fri Dec 28 10:49:10 HKT 2018
	add support for linux kernel(4.14.x)
	* collect/c.cc: collect files without any function
	* plugin/c.cc: fix BUGs when parsing linux kernel vmlinux resfile