@@ -1,2 +1,3 @@
 srcoutput*
 *src*
+log.txt
